--- a/assets/html/perfil.html
+++ b/assets/html/perfil.html
@@ -32,7 +32,7 @@
 
 	<div class="container light-style flex-grow-1 container-p-y">
 		<h4 class="font-weight-bold py-3 mb-4">
-		  Account settings
+		 Edite a sua Conta
 		</h4>
 		<hr class="border-light m-0">
 		<div class="card-body">
